第四次上传

--- a/aidiandian/src/main/resources/templates/qiantai/allMenus.html
+++ b/aidiandian/src/main/resources/templates/qiantai/allMenus.html
@@ -1,4 +1,7 @@
-
+<!--1814080903137 张丹敏-->
+<!--1814080903139 李艺珊-->
+<!--1814080903140 章嘉虹-->
+<!--1814080903141 王泽敏-->
 <html>
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
@@ -37,7 +40,7 @@
             <body style='background:transparent'>
             <script language="JavaScript">
                 function checkSession(){
-                    var session =
+                    // var session =
                     if(session==null){
                         return false
                     }
@@ -55,7 +58,7 @@
 
                     <div id='pdv_3607' class='pdv_class'   style='width:395px;height:25px;top:0px;left:495px; z-index:4'>
                         <div id='spdv_3607' class='pdv_top' style='overflow:hidden;width:100%;height:100%'>
-                            <div class="pdv_border" style="margin:0;padding:0;height:100%;border:0px  solid;background:;">
+                            <div class="pdv_border" style="margin:0;padding:0;height:100%;border:0px  solid;">
 
                                 <div style="padding:0px">
 
@@ -80,13 +83,13 @@
 
                     <div id='pdv_3605' class='pdv_class'   style='width:898px;height:41px;top:65px;left:0px; z-index:6'>
                         <div id='spdv_3605' class='pdv_top' style='overflow:hidden;width:100%;height:100%'>
-                            <div class="pdv_border" style="margin:0;padding:0;height:100%;border:0px  solid;background:;">
-                                <div style="height:25px;margin:1px;display:none;background:;">
-                                    <div style="float:left;margin-left:12px;line-height:25px;font-weight:bold;color:">
+                            <div class="pdv_border" style="margin:0;padding:0;height:100%;border:0px  solid;">
+                                <div style="height:25px;margin:1px;display:none;">
+                                    <div style="float:left;margin-left:12px;line-height:25px;font-weight:bold;">
 
                                     </div>
                                     <div style="float:right;margin-right:10px;display:none">
-                                        <a href="-1" style="line-height:25px;color:">更多</a>
+                                        <a href="-1" style="line-height:25px;">更多</a>
                                     </div>
                                 </div>
                                 <div style="padding:0px">
@@ -155,7 +158,7 @@
                     <!-- 网站标志 -->
                     <div id='pdv_3608' class='pdv_class'  title='' style='width:208px; height:100px; top:-22px; left:0px; z-index:9'>
                         <div id='spdv_3608' class='pdv_top' style='overflow:hidden;width:100%;height:100%'>
-                            <div class="pdv_border" style="margin:0;padding:0;height:100%;border:0px  solid;background:;">
+                            <div class="pdv_border" style="margin:0;padding:0;height:100%;border:0px  solid;">
 
                                 <div style="padding:0px">
                                     <img src="../../static/img/1257477260.gif" alt="" width="100%" border="0"  />
@@ -167,12 +170,15 @@
                     </div>
 
                     <!-- 登录后欢迎界面 -->
-                    <div id='pdv_3699' class='pdv_class'  title='' style='width:300px; height:40; top:-120px; left:600px; z-index:10'>
-                        <div id='spdv_3608' class='pdv_top' style='overflow:hidden;width:100%;height:100%'>
-                            <div class="pdv_border" style="margin:0;padding:0;height:100%;border:0px  solid;background:;">
-                                <div style="height:25px;margin:1px;display:none;background:;">
-                                    <div style="float:left;margin-left:12px;line-height:25px;font-weight:bold;color:"></div>
-                                    <div style="float:right;margin-right:10px;display:none"> <a href="-1" style="line-height:25px;color:">更多</a> </div>
+                    <div id='pdv_3699' class='pdv_class'  title='' style='width:300px; height:40px; top:-120px; left:600px; z-index:10'>
+                        <div class='pdv_top' style='overflow:hidden;width:100%;height:100%'>
+<!--                            <div id='spdv_3608' class='pdv_top' style='overflow:hidden;width:100%;height:100%'>-->
+
+
+                            <div class="pdv_border" style="margin:0;padding:0;height:100%;border:0px  solid;">
+                                <div style="height:25px;margin:1px;display:none;">
+                                    <div style="float:left;margin-left:12px;line-height:25px;font-weight:bold;"></div>
+                                    <div style="float:right;margin-right:10px;display:none"> <a href="-1" style="line-height:25px;">更多</a> </div>
                                 </div>
                                 <div style="padding:0px;font:bold 13px/43px 'Microsoft YaHei','SimSun',Arial,Sans-Serif;color:#feab43;">
 
@@ -210,8 +216,8 @@
                     <div id='spdv_3606' class='pdv_content'
                          style='overflow: visible; width: 100%;'>
                         <div class="pdv_border"
-                             style="margin: 0; padding: 0; height: 100%; border: 0px solid; background:;">
-                            <!-- <div style="height:25px;margin:1px;display:none;background:;">
+                             style="margin: 0; padding: 0; height: 100%; border: 0px solid; ">
+                            <!-- <div style="height:25px;margin:1px;display:none;">
     <div style="float:left;margin-left:12px;line-height:25px;font-weight:bold;color:"></div>
     <div style="float:right;margin-right:10px;display:none"> <a href="-1" style="line-height:25px;color:">更多</a> </div>
   </div>-->
@@ -222,7 +228,7 @@
 
                                 <div id="dingcanall2">
 
-                                    <div style="margin-top: 0px; padding: px;">
+                                    <div style="margin-top: 0px;">
                                         <div id="mm_01" class="dingcanall_connow">
                                             <table>
 
@@ -487,13 +493,12 @@
                             <div id='spdv_3603' class='pdv_content'
                                  style='overflow: hidden; width: 100%; height: 100%'>
                                 <div class="pdv_border"
-                                     style="border: 0px; height: 100%; padding: 0; margin: 0; background: url(base/border/640../../static/img/left.jpg) repeat-y">
+                                     style="border: 0px; height: 100%; padding: 0; margin: 0; background: url(../../static/img/left.jpg) repeat-y">
                                     <div
-                                            style="height: 100%; background: url(..../../static/img/right.jpg) right repeat-y">
+                                            style="height: 100%; background: url(../../static/img/dingcanweekmenu.jpg) right repeat-y">
                                         <div
                                                 style="height: 43px; background: url(../../static/img/bg.jpg) 0px 0px no-repeat">
-                                            <div
-                                                    style="float: left; font: bold 16px/43px 'Microsoft YaHei', 'SimSun', Arial, Sans-Serif; text-align: left; padding-left: 50px; color: #feab43;">
+                                            <div style="float: left; font: bold 16px/43px 'Microsoft YaHei', 'SimSun', Arial, Sans-Serif; text-align: left; padding-left: 50px; color: #feab43;">
                                                 餐厅公告</div>
                                             <div
                                                     style="float: right; width: 60px; height: 43px; text-align: right; background: url(../../static/img/bg.jpg) -840px 0px no-repeat">
@@ -540,15 +545,15 @@
                                 <div id='spdv_3614' class='pdv_content'
                                      style='overflow: visible; width: 100%;'>
                                     <div class="pdv_border"
-                                         style="margin: 0; padding: 0; height: 100%; border: 0px solid; background:;">
+                                         style="margin: 0; padding: 0; height: 100%; border: 0px solid; ">
                                         <div
-                                                style="height: 25px; margin: 1px; display: none; background:;">
+                                                style="height: 25px; margin: 1px; display: none; ">
                                             <div
-                                                    style="float: left; margin-left: 12px; line-height: 25px; font-weight: bold; color:">
+                                                    style="float: left; margin-left: 12px; line-height: 25px; font-weight: bold;">
                                                 我的餐车</div>
                                             <div
                                                     style="float: right; margin-right: 10px; display: none">
-                                                <a href="-1" style="line-height: 25px; color:">更多</a>
+                                                <a href="-1" style="line-height: 25px;">更多</a>
                                             </div>
                                         </div>
                                         <div style="padding: 0px">
@@ -636,15 +641,15 @@
                             <div id='spdv_3613' class='pdv_content'
                                  style='overflow: hidden; width: 100%; height: 100%'>
                                 <div class="pdv_border"
-                                     style="margin: 0; padding: 0; height: 100%; border: 0px solid; background:;">
+                                     style="margin: 0; padding: 0; height: 100%; border: 0px solid; ">
                                     <div
-                                            style="height: 25px; margin: 1px; display: none; background:;">
+                                            style="height: 25px; margin: 1px; display: none; ">
                                         <div
-                                                style="float: left; margin-left: 12px; line-height: 25px; font-weight: bold; color:">
+                                                style="float: left; margin-left: 12px; line-height: 25px; font-weight: bold;">
                                             本周菜单</div>
                                         <div
                                                 style="float: right; margin-right: 10px; display: none">
-                                            <a href="-1" style="line-height: 25px; color:">更多</a>
+                                            <a href="-1" style="line-height: 25px;">更多</a>
                                         </div>
                                     </div>
                                     <div style="padding: 0px">
@@ -656,7 +661,7 @@
                                                     <div id="dingcanweekmenu_top_left">销售排行榜</div>
                                                     <div id="dingcanweekmenu_top_right">&nbsp;</div>
                                                 </div>
-                                                <div style="padding: px;">
+                                                <div>
                                                     <div class="dingcanweekmenuinfo" align="left">
                                                         <link href="../../static/css/newslist_time2.css" rel="stylesheet"
                                                               type="text/css" />
@@ -724,12 +729,12 @@
                                                 </div>
                                             </div>
                                         </div>
-                                        <!--<div id="dingcanweekmenu_bottom_left"></div>
-    <div id="dingcanweekmenu_bottom_right">&nbsp;</div>-->
+
                                     </div>
                                 </div>
-                                <!-- </div>-->
-                            </div></td>
+                                 </div>
+                            </div>
+                        </td>
                     </tr>
                 </table></td>
             </tr>
