--- a/aidiandian/src/main/resources/templates/qiantai/center.html
+++ b/aidiandian/src/main/resources/templates/qiantai/center.html
@@ -1,4 +1,4 @@
-<!--181408093140 章嘉虹-->
+<!--1814080903140 章嘉虹-->
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html>
 <head>
@@ -108,7 +108,7 @@
             <body style='background:transparent'>
             <script language="JavaScript">
                 function checkSession(){
-                    var session =
+                    // var session =
                     if(session==null){
                         return false
                     }
@@ -126,7 +126,7 @@
 
                     <div id='pdv_3607' class='pdv_class'   style='width:395px;height:25px;top:0px;left:495px; z-index:4'>
                         <div id='spdv_3607' class='pdv_top' style='overflow:hidden;width:100%;height:100%'>
-                            <div class="pdv_border" style="margin:0;padding:0;height:100%;border:0px  solid;background:;">
+                            <div class="pdv_border" style="margin:0;padding:0;height:100%;border:0px  solid;">
 
                                 <div style="padding:0px">
 
@@ -151,13 +151,13 @@
 
                     <div id='pdv_3605' class='pdv_class'   style='width:898px;height:41px;top:65px;left:0px; z-index:6'>
                         <div id='spdv_3605' class='pdv_top' style='overflow:hidden;width:100%;height:100%'>
-                            <div class="pdv_border" style="margin:0;padding:0;height:100%;border:0px  solid;background:;">
-                                <div style="height:25px;margin:1px;display:none;background:;">
-                                    <div style="float:left;margin-left:12px;line-height:25px;font-weight:bold;color:">
+                            <div class="pdv_border" style="margin:0;padding:0;height:100%;border:0px  solid;">
+                                <div style="height:25px;margin:1px;display:none;">
+                                    <div style="float:left;margin-left:12px;line-height:25px;font-weight:bold;">
 
                                     </div>
                                     <div style="float:right;margin-right:10px;display:none">
-                                        <a href="-1" style="line-height:25px;color:">更多</a>
+                                        <a href="-1" style="line-height:25px;">更多</a>
                                     </div>
                                 </div>
                                 <div style="padding:0px">
@@ -226,7 +226,7 @@
                     <!-- 网站标志 -->
                     <div id='pdv_3608' class='pdv_class'  title='' style='width:208px; height:100px; top:-22px; left:0px; z-index:9'>
                         <div id='spdv_3608' class='pdv_top' style='overflow:hidden;width:100%;height:100%'>
-                            <div class="pdv_border" style="margin:0;padding:0;height:100%;border:0px  solid;background:;">
+                            <div class="pdv_border" style="margin:0;padding:0;height:100%;border:0px  solid;">
 
                                 <div style="padding:0px">
                                     <img src="../../static/img/1257477260.gif" alt="" width="100%" border="0"  />
@@ -238,12 +238,13 @@
                     </div>
 
                     <!-- 登录后欢迎界面 -->
-                    <div id='pdv_3699' class='pdv_class'  title='' style='width:300px; height:40; top:-120px; left:600px; z-index:10'>
-                        <div id='spdv_3608' class='pdv_top' style='overflow:hidden;width:100%;height:100%'>
-                            <div class="pdv_border" style="margin:0;padding:0;height:100%;border:0px  solid;background:;">
-                                <div style="height:25px;margin:1px;display:none;background:;">
-                                    <div style="float:left;margin-left:12px;line-height:25px;font-weight:bold;color:"></div>
-                                    <div style="float:right;margin-right:10px;display:none"> <a href="-1" style="line-height:25px;color:">更多</a> </div>
+                    <div id='pdv_3699' class='pdv_class'  title='' style='width:300px;height:40px;top:-120px; left:600px; z-index:10'>
+<!--                        <div id='spdv_3608' class='pdv_top' style='overflow:hidden;width:100%;height:100%'>-->
+                        <div class='pdv_top' style='overflow:hidden;width:100%;height:100%'>
+                            <div class="pdv_border" style="margin:0;padding:0;height:100%;border:0px  solid;">
+                                <div style="height:25px;margin:1px;display:none;">
+                                    <div style="float:left;margin-left:12px;line-height:25px;font-weight:bold;"></div>
+                                    <div style="float:right;margin-right:10px;display:none"> <a href="-1" style="line-height:25px;">更多</a> </div>
                                 </div>
                                 <div style="padding:0px;font:bold 13px/43px 'Microsoft YaHei','SimSun',Arial,Sans-Serif;color:#feab43;">
 
