--- a/aidiandian/src/main/resources/templates/qiantai/login.html
+++ b/aidiandian/src/main/resources/templates/qiantai/login.html
@@ -1,3 +1,4 @@
+<!--1814080903141 王泽敏-->
 <html>
 <title>用户登录</title>
 <head>
@@ -53,7 +54,7 @@
             <body style='background:transparent'>
             <script language="JavaScript">
                 function checkSession(){
-                    var session =
+                    // var session =
                     if(session==null){
                         return false
                     }
@@ -71,7 +72,7 @@
 
                     <div id='pdv_3607' class='pdv_class'   style='width:395px;height:25px;top:0px;left:495px; z-index:4'>
                         <div id='spdv_3607' class='pdv_top' style='overflow:hidden;width:100%;height:100%'>
-                            <div class="pdv_border" style="margin:0;padding:0;height:100%;border:0px  solid;background:;">
+                            <div class="pdv_border" style="margin:0;padding:0;height:100%;border:0px  solid;">
 
                                 <div style="padding:0px">
 
@@ -96,13 +97,13 @@
 
                     <div id='pdv_3605' class='pdv_class'   style='width:898px;height:41px;top:65px;left:0px; z-index:6'>
                         <div id='spdv_3605' class='pdv_top' style='overflow:hidden;width:100%;height:100%'>
-                            <div class="pdv_border" style="margin:0;padding:0;height:100%;border:0px  solid;background:;">
-                                <div style="height:25px;margin:1px;display:none;background:;">
-                                    <div style="float:left;margin-left:12px;line-height:25px;font-weight:bold;color:">
+                            <div class="pdv_border" style="margin:0;padding:0;height:100%;border:0px  solid;">
+                                <div style="height:25px;margin:1px;display:none;">
+                                    <div style="float:left;margin-left:12px;line-height:25px;font-weight:bold;">
 
                                     </div>
                                     <div style="float:right;margin-right:10px;display:none">
-                                        <a href="-1" style="line-height:25px;color:">更多</a>
+                                        <a href="-1" style="line-height:25px;">更多</a>
                                     </div>
                                 </div>
                                 <div style="padding:0px">
@@ -171,7 +172,7 @@
                     <!-- 网站标志 -->
                     <div id='pdv_3608' class='pdv_class'  title='' style='width:208px; height:100px; top:-22px; left:0px; z-index:9'>
                         <div id='spdv_3608' class='pdv_top' style='overflow:hidden;width:100%;height:100%'>
-                            <div class="pdv_border" style="margin:0;padding:0;height:100%;border:0px  solid;background:;">
+                            <div class="pdv_border" style="margin:0;padding:0;height:100%;border:0px  solid;">
 
                                 <div style="padding:0px">
                                     <img src="../../static/img/1257477260.gif" alt="" width="100%" border="0"  />
@@ -183,12 +184,13 @@
                     </div>
 
                     <!-- 登录后欢迎界面 -->
-                    <div id='pdv_3699' class='pdv_class'  title='' style='width:300px; height:40; top:-120px; left:600px; z-index:10'>
-                        <div id='spdv_3608' class='pdv_top' style='overflow:hidden;width:100%;height:100%'>
-                            <div class="pdv_border" style="margin:0;padding:0;height:100%;border:0px  solid;background:;">
-                                <div style="height:25px;margin:1px;display:none;background:;">
-                                    <div style="float:left;margin-left:12px;line-height:25px;font-weight:bold;color:"></div>
-                                    <div style="float:right;margin-right:10px;display:none"> <a href="-1" style="line-height:25px;color:">更多</a> </div>
+                    <div id='pdv_3699' class='pdv_class'  title='' style='width:300px; height:40px;top:-120px; left:600px; z-index:10'>
+<!--                        <div id='spdv_3608' class='pdv_top' style='overflow:hidden;width:100%;height:100%'>-->
+                        <div class='pdv_top' style='overflow:hidden;width:100%;height:100%'>
+                            <div class="pdv_border" style="margin:0;padding:0;height:100%;border:0px  solid;">
+                                <div style="height:25px;margin:1px;display:none;">
+                                    <div style="float:left;margin-left:12px;line-height:25px;font-weight:bold;"></div>
+                                    <div style="float:right;margin-right:10px;display:none"> <a href="-1" style="line-height:25px;">更多</a> </div>
                                 </div>
                                 <div style="padding:0px;font:bold 13px/43px 'Microsoft YaHei','SimSun',Arial,Sans-Serif;color:#feab43;">
 
@@ -223,9 +225,9 @@
             <div id='pdv_391' class='pdv_class'  title='会员登录' style='width:681px; height:300px; top:0px; left:0px; z-index:50'>
                 <div id='spdv_391' class='pdv_content' style='overflow:hidden;width:100%;height:100%'>
                     <div class="pdv_border" style="margin:0;padding:0;height:100%;border:0px  solid;background:#fff;">
-                        <div style="height:25px;margin:1px;display:none;background:;">
-                            <div style="float:left;margin-left:12px;line-height:25px;font-weight:bold;color:"> 会员登录 </div>
-                            <div style="float:right;margin-right:10px;display:none"> <a href="-1" style="line-height:25px;color:">更多</a></div>
+                        <div style="height:25px;margin:1px;display:none;">
+                            <div style="float:left;margin-left:12px;line-height:25px;font-weight:bold;"> 会员登录 </div>
+                            <div style="float:right;margin-right:10px;display:none"> <a href="-1" style="line-height:25px;">更多</a></div>
                         </div>
                         <div style="padding:0px">
                             <script type="text/javascript" src="../../static/js/login.js"></script>
